--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body style="background-color: brown;">
     <header>
         
-        <ul class="nav nav-pills bg-light" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-                <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+        <ul class="nav nav-pills bg-dark" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+                <li class="nav-item"><a href="" class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Who We Are</a></li>
                 <li class="nav-item"><a href="" class="nav-link">What We Do</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Booking</a></li>
